package com.christopher.MagicWorld;

public interface Attaque {

    void attaqueBase();
    void AttaqueSpecial();

}
