@startuml

class Joueur {
- choix : int
- type : String
- temp : String
- type : Personnage
+ choix()
}

abstract Personnage{

}

class Guerrier {
 }

class Mage {
}

class Rodeur {
}

interface Attaque {
}

abstract attaqueSpecial {
}

abstract attaqueBasique {
}

class attaqueBasiqueGuerrier {
}

class attaqueSpecialGuerrier {
}

class attaqueBasiqueMage {
}

class attaqueSpecialMage {
}

Attaque -- attaqueSpecial : < Implement
Attaque -- attaqueBasique : < Implement
attaqueBasique <|-- attaqueBasiqueGuerrier
attaqueSpecial <|-- attaqueSpecialGuerrier
attaqueBasique <|-- attaqueBasiqueMage
attaqueSpecial <|-- attaqueSpecialMage





Personnage <|-- Guerrier
Personnage <|-- Rodeur
Personnage <|-- Mage

Personnage --* Joueur
Personnage *-- Attaque


@enduml